2008-03-30  Martin Hunt  <hunt@redhat.com>

	* runtime.h (STP_USE_FRAME_POINTER): Define when frame pointers
	are available in the kernel and can be used.
	* stack-arm.c: Use STP_USE_FRAME_POINTER.
	* stack-i386.c: Ditto.
	* unwind/i386.h: Ditto.
	* unwind/x86_64.h: Ditto.

2008-03-28  Martin Hunt  <hunt@redhat.com>

	* copy.c (_stp_read_address): New function. Safely read 
	kernel or userspace.

2008-03-26  Martin Hunt  <hunt@redhat.com>
	    Fixes to get i386 working.
	* unwind.c (unwind): Fix types in debug print.
	* stack-i386.c (_stp_stack_print_fallback): New function.
	(__stp_stack_print): Call _stp_stack_print_fallback() if unwinder
	appears to fail.

2008-03-25  Martin Hunt  <hunt@redhat.com>

	* unwind.c (unwind): Return a positive number to indicate
	that unwinding is done.

2008-03-17  Eugene Teo  <eteo@redhat.com>

	PR 5947
	* autoconf-tsc-khz.c: Remove "&& defined(__i386__)" to make the test
	more pessimistic.

2008-03-14  Masami Hiramatsu <mhiramat@redhat.com>

	PR 3542
	* autoconf-unregister-kprobes.c : New file.

2008-03-10  Dave Brolley  <brolley@redhat.com>

	PR5189
	* vsprintf.c (_stp_vsnprintf): Arguments for dynamic width and precision
	are of type 'int' again.
	* loc2c-runtime.h (deref_string): Copy the data only if dst is not NULL.
	(deref_buffer): New macro.

2008-02-27  Martin Hunt  <hunt@redhat.com>

	* sym.h (_stp_module): Add text_size, lock, and unwind data
	pointer.	
	* sym.c (_stp_find_module_by_addr): New function.
	(_stp_kallsyms_lookup): Call _stp_find_module_by_addr().
	(_stp_get_unwind_info): New.
	
	* runtime.h: Move debug macros to debug.h. Include it.
	* debug.h: New file.
	* map.c: Update debug calls.
	* map-gen.c: Update debug calls.
	* pmap-gen.c: Update debug calls.
	
	* mempool.c: New file. 
	
2008-02-27  Dave Brolley  <brolley@redhat.com>

	PR5189
	* vsprintf.c (_stp_vsnprintf): Extract arguments of type int64_t for
	dynamic width and precision. Implement width and precision correctly for